src/static/css/styles.css
/* ... */
.guides .guide .icon-container {
    position: relative;
    display: inline-flex;
    align-items: center;
    min-height: 45px;
    vertical-align: middle;
    padding: 5px;
    margin-right: 10px;
}

.guides .guide .icon-container img {
    width: 45px;
    image-rendering: -webkit-optimize-contrast;
}

.guides .guide .name,
.guides .guide .arrow {
    display: inline-block;
    vertical-align: middle;
}

.guides .guide .arrow {
    position: absolute;
    right: 12px;
    top: calc(50% - 8px);
    transition-duration: 100ms;
}

.guides .guide:hover .arrow {
    right: 8px;
}

.guides .guide .coming-soon {
    font-size: 11px;
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
}

.guides .guide-items {
    display: grid;
    justify-items: stretch;
    gap: 10px;
    grid-template-columns: repeat(2, calc(50% - 5px));
}

@media (max-width: 786px) {
    .guides .guide-items {
        display: block;
    }

    .guides .guide {
        display: block;

        width: 100%;
        margin: 10px 0;
        box-sizing: border-box;
    }
}

.code {
    position: relative;
    margin: 5px 0;
    white-space: pre;
    background: #201600;
    color: #fff;
    padding: 5px 0;
    box-shadow: inset 5px 5px 8px rgb(0 0 0);
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
}

.code .code-content {
    overflow-y: auto;
}

.code .code-head .title {
    max-width: calc(100% - 90px);
    overflow-y: auto;
    padding: 0 10px;
    font-weight: 500;
    text-overflow: clip;
}

.code .line {
    padding: 0 10px;
    font-family: "Red Hat Mono", monospace;
}

.code.language-typescript .line {
    /* Because HLJS is broken w/ TS optional types */
    color: #f92672;
}

.code .line.highlight {
    color: #000;
    background: #383830;
}

.code .line .line-number {
    display: inline-block;
    width: 17px;
    padding-right: 10px;
    user-select: none;
    color: #fff;
}

.top-right, .screenshot-link {
    position: absolute;
    top: 5px;
    right: 5px;
    font-size: 12px;
    text-align: center;
}

.top-right a {
    color: #fff;
    text-decoration: none;
}

.top-right > * {
    margin-left: 10px;
    font-size: 12px;
}

.top-right > * > * {
    display: inline-block;
    vertical-align: middle;
}

.top-right .copy {
    cursor: pointer;
}

.top-right .copy * {
    pointer-events: none;
}

.index-guide-item .index-guide-link img {
    width: 16px;
}

@media (prefers-color-scheme: dark) {
    .index-guide-item .index-guide-link img {
        filter: invert(1);
    }
}

.index-guide-item h2 {
    margin-top: 30px;
    letter-spacing: 0.5px;
    font-family: "Red Hat Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

.screenshot, .code, .related-parameter, .api-resource-header, .CodeMirror, .example-iframe {
    box-shadow: 0 0 30px rgba(32, 22, 0, 0.25);
    border-radius: 3px;
}

.screenshot {
    position: relative;
    margin: 10px 0;
    padding: 0 0 35px 0;
    text-align: center;
    background: #201600;
    color: #fff;
}

.screenshot .title {
    font-weight: 500;
    padding: 10px 0 15px 10px;
    text-align: left;
}

.screenshot .screenshot-image {
    max-width: calc(100% - 30px);
    box-sizing: border-box;
    margin: auto 15px;
    box-shadow: 0 0 30px rgba(255, 255, 255, 0.2);
    border-radius: 5px;
    background: #fafafa;
    padding: 15px;
}

.related-parameter, .api-resource-header {
    margin: 10px 0;
    padding: 5px 10px;
    background: #201600;
    color: #fff;
    font-size: 13px;
}

.related-parameter span, .api-resource-header span {
    font-family: "Red Hat Mono", monospace;
}

.related-parameter span.as, .api-resource-header span.as {
    color: deeppink;
}

.related-parameter a, .related-parameter a a {
    color: #fff;
}

.pagination .btn {
    display: inline-block;
    margin-bottom: 10px;
    padding: 7px 10px;
    border-radius: 5px;
    font-size: 15px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
    background: #201600;
    color: #fff;
    text-decoration: none;
    border: none;
    cursor: pointer;
}


@media (prefers-color-scheme: dark) {
    .pagination .btn {
        background: #090a0a;
    }

    .pagination .btn:hover {
        background: #012f46;
    }
}

.pagination .btn.prev {
    float: left;
}

.pagination .btn.next {
    float: right;
}

@media (prefers-color-scheme: dark) {
    a {
        color: #fff;
    }
}

h4 {
    background: #efefef;
    padding: 4px;
    font-family: "Red Hat Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}


@media (prefers-color-scheme: dark) {
    h4 {
        background: #012f46;
    }
}

